Stop sidebar grid from stretching vertically

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   grid-row: 1 / 3;
   display: grid;
   gap: 50px;
+  align-content: start;
 }
 
 .sidebar__nav-section {
